--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Frontend Configuration
 # Get your Infura API key from: https://infura.io/
-VITE_INFURA_API_KEY=your_infura_api_key_here
+VITE_INFURA_API_KEY=4b10e92a256845688ea82b2894de73ca
 
 # Get your WalletConnect project ID from: https://cloud.walletconnect.com/
-VITE_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
+VITE_WALLETCONNECT_PROJECT_ID=5a90c393243c43576575dc40ba2d6f1e
 
 # Optional: Custom contract addresses (uses defaults if not set)
 # These are the current deployed contract addresses on Sepolia testnet
@@ -15,7 +15,7 @@ VITE_FLUFFY_SWAP_ADDRESS=0xcf9857622dc4bdf71b1cdbbc7d3ad9215027afc6
 PRIVATE_KEY=your_private_key_here
 
 # Sepolia testnet RPC URL (using Infura)
-SEPOLIA_RPC_URL=https://sepolia.infura.io/v3/YOUR_INFURA_KEY
+SEPOLIA_RPC_URL=https://sepolia.infura.io/v3/4b10e92a256845688ea82b2894de73ca
 
 # Etherscan API key for contract verification
 # Get from: https://etherscan.io/apis
